--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
             </p>
         </div>
     </div>
-    <script src="I.A-2/script.js"></script>
+    <script src="I.A-2/"></script>
 </body>
 </html>
