--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
             </p>
         </div>
     </div>
-    <script src="I.A-2/aleatorio .js"></script>
-    <script src="I.A-2/perguntas.js"></script>
-    <script src="I.A-2/script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
