--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                 E o seu texto final, já está pronto ?
             </p>
         </div>
-    </div>
-    <script src="main.js"></script>
+    </div> 
+      <script src="I.A-2/perguntas.js"></script>
+      <script src="I.A-2/aleatorio .js"></script>
+    <script  src="main.js"></script>
 </body>
 </html>
